--- a/package.json
+++ b/package.json
@@ -3,13 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
+    "lodash": "^4.17.11",
     "react": "^16.6.0",
+    "react-dev-utils": "^6.1.1",
     "react-dom": "^16.6.0",
     "react-redux": "^5.1.0",
     "react-scripts": "2.1.0",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "semantic-ui-css": "2.3.0",
+    "semantic-ui-react": "0.78.2"
   },
   "scripts": {
     "start": "react-scripts start",
